--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Basic meta tags. -->
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- Icons. -->
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -22,9 +24,24 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Social media metadata. -->
+        <meta property="og:title" content="Romania La VOT">
+        <meta property="og:description" content="Alege cum crezi că se vor redistribui voturile candidaților pentru turul doi. România mai poate decide. Hai la vot.">
+        <meta property="og:image" content="/images/lavot-logo-large.png">
+        <meta property="og:url" content="https://lavot.mihaiconstantin.com">
+        <meta property="og:type" content="website">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Romania La VOT">
+        <meta name="twitter:description" content="Alege cum crezi că se vor redistribui voturile candidaților pentru turul doi. România mai poate decide. Hai la vot.">
+        <meta name="twitter:image" content="/images/lavot-logo-large.png">
+
+        <!-- Page title. -->
         <title>Romania La VOT</title>
+
+        <!-- Bootstrap CDN. -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+
+        <!-- Google Fonts. -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
